Moved subdir to root

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
     <script>
         $(function () {
             $('.pinned').each(function () {
-                var $this = $(this);
+                let $this = $(this);
                 $this.pushpin({
                     top: 1
                 });
